--- a/www.nass.gov.ng/30f1495cb93727af910cf8d5a68b4a304c81e27b.yml
+++ b/www.nass.gov.ng/30f1495cb93727af910cf8d5a68b4a304c81e27b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:47:01 GMT
+    - Mon, 19 Jun 2017 14:25:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UFb-zeX9jlEI8De%2C-S3Mz0; path=/
+    - PHPSESSID=3AqzCejhyupLypNEl19jn2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:47:01 GMT
+recorded_at: Mon, 19 Jun 2017 14:25:16 GMT
