--- a/www.nass.gov.ng/ff2db6bba73b8b3ea1e4b3c3080914e19ce00204.yml
+++ b/www.nass.gov.ng/ff2db6bba73b8b3ea1e4b3c3080914e19ce00204.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:47:36 GMT
+    - Mon, 19 Jun 2017 14:26:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VZpiw8gbphXRRV4S%2CeDcj3; path=/
+    - PHPSESSID=o2qnGd23wkDpzOuotwAg-3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:47:36 GMT
+recorded_at: Mon, 19 Jun 2017 14:26:33 GMT
