--- a/www.nass.gov.ng/507e242ae024da5da132585b177ecc50b07d1321.yml
+++ b/www.nass.gov.ng/507e242ae024da5da132585b177ecc50b07d1321.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:52:22 GMT
+    - Mon, 19 Jun 2017 14:32:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yK-nORZy84fzYDitmTQQT3; path=/
+    - PHPSESSID=lC4lY%2Cox5%2C9yNBYm-G0422; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:52:22 GMT
+recorded_at: Mon, 19 Jun 2017 14:32:31 GMT
