--- a/www.nass.gov.ng/9e209ae9811fb6cd3ce7d65ecc3bddc4aa65cb75.yml
+++ b/www.nass.gov.ng/9e209ae9811fb6cd3ce7d65ecc3bddc4aa65cb75.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:54:40 GMT
+    - Mon, 19 Jun 2017 14:34:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DVe9%2C2-EOo6K7jYnvEuWr1; path=/
+    - PHPSESSID=JfPjjxU6EC6DYulRhbEwa3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:54:41 GMT
+recorded_at: Mon, 19 Jun 2017 14:34:33 GMT
