--- a/www.nass.gov.ng/6344da3494271fe58d07342c9e232db594787baf.yml
+++ b/www.nass.gov.ng/6344da3494271fe58d07342c9e232db594787baf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:57:21 GMT
+    - Mon, 19 Jun 2017 14:36:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hYYt%2CZ71%2CYyV8MjEoRULS3; path=/
+    - PHPSESSID=QI8JVUHk1Iuexy0KVLchh1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:57:21 GMT
+recorded_at: Mon, 19 Jun 2017 14:36:17 GMT
