--- a/www.nass.gov.ng/1aabcb6bdc9a4bfd289d79419c529428784fa467.yml
+++ b/www.nass.gov.ng/1aabcb6bdc9a4bfd289d79419c529428784fa467.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:58:29 GMT
+    - Mon, 19 Jun 2017 14:37:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Xx1qEFV%2CzAN7e8XO9rWRZ0; path=/
+    - PHPSESSID=PE6B37CdMtZ-6CzeZXdHY0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:58:29 GMT
+recorded_at: Mon, 19 Jun 2017 14:37:21 GMT
