--- a/www.nass.gov.ng/a4b506308f35817cca495593876d0aa32d9d6f72.yml
+++ b/www.nass.gov.ng/a4b506308f35817cca495593876d0aa32d9d6f72.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 18:58:54 GMT
+    - Mon, 19 Jun 2017 14:38:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hsg3ayqQnNv8tbeYnvhVP3; path=/
+    - PHPSESSID=tJK7t3UR%2C%2CivV1g0jBs882; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 18:58:55 GMT
+recorded_at: Mon, 19 Jun 2017 14:38:03 GMT
