--- a/www.nass.gov.ng/198eb9a1f6a865c3d56c828511aa424f5ea80746.yml
+++ b/www.nass.gov.ng/198eb9a1f6a865c3d56c828511aa424f5ea80746.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 19:01:34 GMT
+    - Mon, 19 Jun 2017 14:40:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9%2CWvrV7pVIoQ2lA9ocl%2CL1; path=/
+    - PHPSESSID=5RvFWwlvw%2CYzSYoOsIXQB2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 19:01:34 GMT
+recorded_at: Mon, 19 Jun 2017 14:40:51 GMT
