--- a/www.nass.gov.ng/541ab85dd11e7a6fddbda485a1774f43d66d50bf.yml
+++ b/www.nass.gov.ng/541ab85dd11e7a6fddbda485a1774f43d66d50bf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 19:04:35 GMT
+    - Mon, 19 Jun 2017 14:43:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=OPs6vHN%2C8SRp8iaxsi9F-3; path=/
+    - PHPSESSID=t35uIQN2oOrqZ2tb6Ul6A0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 19:04:35 GMT
+recorded_at: Mon, 19 Jun 2017 14:43:31 GMT
