--- a/www.nass.gov.ng/ba1541f138e4adba9a2e3b75f86cb47d6aab0ee6.yml
+++ b/www.nass.gov.ng/ba1541f138e4adba9a2e3b75f86cb47d6aab0ee6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 19:07:47 GMT
+    - Mon, 19 Jun 2017 14:47:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=aHjs5%2CHZwH7ELyH3BCNrO1; path=/
+    - PHPSESSID=wOJ4WfjJaWT7xpUpwVDpZ3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 19:07:47 GMT
+recorded_at: Mon, 19 Jun 2017 14:47:30 GMT
