--- a/www.nass.gov.ng/c005d1a1f2a9d59f42fc20f4db5bc6ff8dd5c8f1.yml
+++ b/www.nass.gov.ng/c005d1a1f2a9d59f42fc20f4db5bc6ff8dd5c8f1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 19:08:22 GMT
+    - Mon, 19 Jun 2017 14:48:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=s46N8aCUvFqPoiKno%2CzAQ2; path=/
+    - PHPSESSID=w%2C5iQ9uob5rA06XDQPJS42; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 19:08:22 GMT
+recorded_at: Mon, 19 Jun 2017 14:48:07 GMT
