--- a/www.nass.gov.ng/a9d9b9708d3bd748c419f7bfe64716d9b268dec7.yml
+++ b/www.nass.gov.ng/a9d9b9708d3bd748c419f7bfe64716d9b268dec7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 19:10:25 GMT
+    - Mon, 19 Jun 2017 14:49:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LPTjGeoC%2C1TfXpzqdjHO22; path=/
+    - PHPSESSID=m4xoKxt%2CsDFykdmOLQdD90; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 19:10:25 GMT
+recorded_at: Mon, 19 Jun 2017 14:49:39 GMT
