--- a/www.nass.gov.ng/7dca661655bafca1032a34026a34dfb56bd519c4.yml
+++ b/www.nass.gov.ng/7dca661655bafca1032a34026a34dfb56bd519c4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 19:15:15 GMT
+    - Mon, 19 Jun 2017 14:54:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XvsaU72E2FmaFlHS0Q%2CRV2; path=/
+    - PHPSESSID=JDMHGiwF2eCw8EjQk3YGv0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 19:15:15 GMT
+recorded_at: Mon, 19 Jun 2017 14:54:11 GMT
