--- a/www.nass.gov.ng/ebeff1e82e823cabc89e7ee4ace8853c18ae2049.yml
+++ b/www.nass.gov.ng/ebeff1e82e823cabc89e7ee4ace8853c18ae2049.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 19:16:37 GMT
+    - Mon, 19 Jun 2017 14:55:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Q15o2mek3qqbqYMs%2CtFMl0; path=/
+    - PHPSESSID=YbtJl2oUHg510vaH3P7gg0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 19:16:37 GMT
+recorded_at: Mon, 19 Jun 2017 14:55:31 GMT
