--- a/www.nass.gov.ng/789716f7bb84c252de8b0ab1c4e946956f8b8ac9.yml
+++ b/www.nass.gov.ng/789716f7bb84c252de8b0ab1c4e946956f8b8ac9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 19:19:33 GMT
+    - Mon, 19 Jun 2017 14:58:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Z%2CXnhJRzv0eU%2C0jobsYxO1; path=/
+    - PHPSESSID=OjXu8KFXTcWnrGn5HP8WL0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 19:19:33 GMT
+recorded_at: Mon, 19 Jun 2017 14:58:16 GMT
