--- a/www.nass.gov.ng/f8d1624d110106d6caae417f6a632ae22d9b2492.yml
+++ b/www.nass.gov.ng/f8d1624d110106d6caae417f6a632ae22d9b2492.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 19:20:10 GMT
+    - Mon, 19 Jun 2017 14:59:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eX%2CedMivKlo%2C82sp1lytX0; path=/
+    - PHPSESSID=r0kB24zHiPG1FAyVusSPn1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 19:20:10 GMT
+recorded_at: Mon, 19 Jun 2017 14:59:32 GMT
