--- a/www.nass.gov.ng/58324c05d6953e9b9cffd0ce43772c4b4f3b03aa.yml
+++ b/www.nass.gov.ng/58324c05d6953e9b9cffd0ce43772c4b4f3b03aa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 19:23:53 GMT
+    - Mon, 19 Jun 2017 15:03:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xtO7YZHcwvpEZlGrqngs20; path=/
+    - PHPSESSID=6OvNNG%2C4xwbeEvTPLLkhR1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 19:23:53 GMT
+recorded_at: Mon, 19 Jun 2017 15:03:07 GMT
