--- a/www.nass.gov.ng/a26dd6cd219c69dde84917c86ae24952c3b5960c.yml
+++ b/www.nass.gov.ng/a26dd6cd219c69dde84917c86ae24952c3b5960c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 19:24:26 GMT
+    - Mon, 19 Jun 2017 15:04:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VlnrSIHJmQsIDyn2mPQ-O0; path=/
+    - PHPSESSID=tTQ02WBVGbJ-Lls4mjz%2Cr1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 19:24:27 GMT
+recorded_at: Mon, 19 Jun 2017 15:04:02 GMT
