--- a/www.nass.gov.ng/07236db57893a9639696ab6dc7776990c54bf746.yml
+++ b/www.nass.gov.ng/07236db57893a9639696ab6dc7776990c54bf746.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 19:25:02 GMT
+    - Mon, 19 Jun 2017 15:05:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=p%2C4StzD-1jTKtXLfPHPcq0; path=/
+    - PHPSESSID=QpG4xPwTUCPaOV2sAQzft1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 19:25:02 GMT
+recorded_at: Mon, 19 Jun 2017 15:05:19 GMT
