--- a/www.nass.gov.ng/23046b6b514fd6da83765e7baf3a96afd427b821.yml
+++ b/www.nass.gov.ng/23046b6b514fd6da83765e7baf3a96afd427b821.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 19:29:00 GMT
+    - Mon, 19 Jun 2017 15:09:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9wDgHqmwWg%2CHv0ZXwaDmw3; path=/
+    - PHPSESSID=LCdcNhx6Ofp2J8J4Jy-f%2C0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 19:29:00 GMT
+recorded_at: Mon, 19 Jun 2017 15:09:46 GMT
