--- a/www.nass.gov.ng/af079e37caeb1a8fad2c1325ca38fd2f80ca4e62.yml
+++ b/www.nass.gov.ng/af079e37caeb1a8fad2c1325ca38fd2f80ca4e62.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 19:29:18 GMT
+    - Mon, 19 Jun 2017 15:10:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dWNQbfQ3pM1FlGjA-%2CKe03; path=/
+    - PHPSESSID=tIDi8OW3EM7TI8o0cEYU20; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 19:29:18 GMT
+recorded_at: Mon, 19 Jun 2017 15:10:23 GMT
