--- a/www.nass.gov.ng/d187772c66ad89c7365cd896818041ae4dbc56a6.yml
+++ b/www.nass.gov.ng/d187772c66ad89c7365cd896818041ae4dbc56a6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 19:37:17 GMT
+    - Mon, 19 Jun 2017 15:17:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HEHA2y120pfLVDSaZ77b40; path=/
+    - PHPSESSID=m-VYRIldMYlez%2CqsyyXKQ1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 19:37:17 GMT
+recorded_at: Mon, 19 Jun 2017 15:17:07 GMT
