--- a/www.nass.gov.ng/e0e825e9844cf3dbb9559e28c453c4ad20f1ff29.yml
+++ b/www.nass.gov.ng/e0e825e9844cf3dbb9559e28c453c4ad20f1ff29.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 19:42:21 GMT
+    - Mon, 19 Jun 2017 15:21:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=p%2Cg98VZDmwQP18IyNCWgB2; path=/
+    - PHPSESSID=OlFfdzj5ogROLHwNnXhe%2C2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 19:42:21 GMT
+recorded_at: Mon, 19 Jun 2017 15:21:53 GMT
