--- a/www.nass.gov.ng/349c6f2dcb6b3079f9e889a8decb01083d33948e.yml
+++ b/www.nass.gov.ng/349c6f2dcb6b3079f9e889a8decb01083d33948e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 19:52:04 GMT
+    - Mon, 19 Jun 2017 15:31:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XANmOcJ3GrBm3y4IE2JTX0; path=/
+    - PHPSESSID=P9aU9w0xAf%2CA45Qx2T51v2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 19:52:04 GMT
+recorded_at: Mon, 19 Jun 2017 15:31:16 GMT
