--- a/www.nass.gov.ng/7a2da2d9faeade71beb122830caf9f7f9fc82888.yml
+++ b/www.nass.gov.ng/7a2da2d9faeade71beb122830caf9f7f9fc82888.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 20:04:19 GMT
+    - Mon, 19 Jun 2017 15:41:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=aTxex4lHoG8BJ0I0RSlxC2; path=/
+    - PHPSESSID=hNXIXa0MFo%2C-6zP%2CEjLBu3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 20:04:20 GMT
+recorded_at: Mon, 19 Jun 2017 15:41:50 GMT
