--- a/www.nass.gov.ng/49a6cd159ab5a85819e2996833bc115735063aff.yml
+++ b/www.nass.gov.ng/49a6cd159ab5a85819e2996833bc115735063aff.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 20:05:22 GMT
+    - Mon, 19 Jun 2017 15:43:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hfb690EIWreRQy%2CHBCxTG1; path=/
+    - PHPSESSID=sDcpkgtY%2CaV%2CxQYVrN2ds0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 20:05:22 GMT
+recorded_at: Mon, 19 Jun 2017 15:43:06 GMT
