--- a/www.nass.gov.ng/2e42359335e885352a35c06c137077b50add1510.yml
+++ b/www.nass.gov.ng/2e42359335e885352a35c06c137077b50add1510.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 20:05:43 GMT
+    - Mon, 19 Jun 2017 15:43:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YAV-tyyd%2Cn-YNL9xy-GJ%2C2; path=/
+    - PHPSESSID=d5ASDUGJ83YAR7REmRt2B3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 20:05:43 GMT
+recorded_at: Mon, 19 Jun 2017 15:43:25 GMT
