--- a/www.nass.gov.ng/cb057d7bf7c29d8f9b867c3621a465eb3d122615.yml
+++ b/www.nass.gov.ng/cb057d7bf7c29d8f9b867c3621a465eb3d122615.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 20:11:40 GMT
+    - Mon, 19 Jun 2017 15:48:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wemfRY5go%2C%2C7tY9Kc-H-J0; path=/
+    - PHPSESSID=xapH9tw5HGV%2CE2pMRQwfC1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 20:11:40 GMT
+recorded_at: Mon, 19 Jun 2017 15:48:56 GMT
