--- a/www.nass.gov.ng/86f525e963fdf06247078dfaa809105ca65ca552.yml
+++ b/www.nass.gov.ng/86f525e963fdf06247078dfaa809105ca65ca552.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 20:15:26 GMT
+    - Mon, 19 Jun 2017 15:52:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=H5zLVHT2RWDvwwvjD3BV%2C1; path=/
+    - PHPSESSID=bhpdVoShwX8SN5o3Gqn5K2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 20:15:26 GMT
+recorded_at: Mon, 19 Jun 2017 15:52:03 GMT
