--- a/www.nass.gov.ng/d7457242767a46d35dbe6eead2d3a9cf49146446.yml
+++ b/www.nass.gov.ng/d7457242767a46d35dbe6eead2d3a9cf49146446.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 20:16:37 GMT
+    - Mon, 19 Jun 2017 15:53:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xanAzT4pBUgX-JJUdGGMe0; path=/
+    - PHPSESSID=ulh%2C7d0wBrX5PP-pYAbBQ0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 20:16:37 GMT
+recorded_at: Mon, 19 Jun 2017 15:53:00 GMT
