--- a/www.nass.gov.ng/b3a256f5e0aee7a49ba718ba47197995e61cbe45.yml
+++ b/www.nass.gov.ng/b3a256f5e0aee7a49ba718ba47197995e61cbe45.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 20:19:10 GMT
+    - Mon, 19 Jun 2017 15:55:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hSPcDgcFSJhbZNSzbTX5v0; path=/
+    - PHPSESSID=oT04zvVMnq-ja%2C4lYyYYK3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 20:19:10 GMT
+recorded_at: Mon, 19 Jun 2017 15:55:55 GMT
