--- a/www.nass.gov.ng/94c3570771f5399a6981a5a77139ac7d70644d3b.yml
+++ b/www.nass.gov.ng/94c3570771f5399a6981a5a77139ac7d70644d3b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 20:19:57 GMT
+    - Mon, 19 Jun 2017 15:57:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vke6GIbF0Pz3bbY1RcwlE2; path=/
+    - PHPSESSID=n8ZBUG%2C6srPyKTzHmK7Ti3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 20:19:57 GMT
+recorded_at: Mon, 19 Jun 2017 15:57:34 GMT
