--- a/www.nass.gov.ng/a4003b77df6fd38873a89d54c696100c7906a1df.yml
+++ b/www.nass.gov.ng/a4003b77df6fd38873a89d54c696100c7906a1df.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 20:28:47 GMT
+    - Mon, 19 Jun 2017 16:05:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0SW8EJE8Sf-9Arwq%2C4Sbw0; path=/
+    - PHPSESSID=wjHiITvyU4JqNhRcjQ3PT2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 20:28:47 GMT
+recorded_at: Mon, 19 Jun 2017 16:05:42 GMT
