--- a/www.nass.gov.ng/43b179ad17c029abb1ff1817c07e9fd8978be464.yml
+++ b/www.nass.gov.ng/43b179ad17c029abb1ff1817c07e9fd8978be464.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 20:29:25 GMT
+    - Mon, 19 Jun 2017 16:06:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=byEEhaf3Hy-1%2CS6Ndz2Ym3; path=/
+    - PHPSESSID=cNnYVE03HIeesjbbZDquv2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 20:29:25 GMT
+recorded_at: Mon, 19 Jun 2017 16:06:01 GMT
